added package.json file

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/sun1102/namaste-react/issues"
   },
-  "homepage": "https://github.com/sun1102/namaste-react#readme"
+  "homepage": "https://github.com/sun1102/namaste-react#readme",
+  "devDependencies": {
+    "parcel": "^2.8.3"
+  }
 }
